overflow fixed

--- a/src/less/explore.less
+++ b/src/less/explore.less
@@ -112,7 +112,12 @@
 .entry a {
 	margin:0px;
 	padding:0px;
-	color:#91CED7;
+	color:#344146;
+	text-decoration:none;
+}
+
+.entry a:hover {
+	text-decoration:underline;
 }
 
 .entry p {
