--- a/src/less/techsnippet.less
+++ b/src/less/techsnippet.less
@@ -227,7 +227,7 @@ p.signature {
 	border: 0px solid rgba(52, 65, 70, 0.1);
 	background-clip:padding-box;
 	margin:0px auto;
-	background: linear-gradient(to right, white 49%, #87766C 50%);
+	background: linear-gradient(to right, white 49%, rgba(52, 65, 70, 0.4) 50%);
 	background-size: 200% 100%;
 	background-position:left bottom;
 	transition:all 0.5s ease;
